--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,50 @@ body {
   width: 100%;
   height: 100%;
 }
+
+/* search section */
+.searchbox{
+  width: 500px;
+  padding: 5px;
+  margin: 30px auto;
+}
+
+.searchbox h5{
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.searchbox .search{
+  width: 300px;
+  margin: 0 auto;
+  padding: 5px;
+}
+
+.searchbox .search input{
+  width: 100%;
+  font-size: 20px;
+  border: 2px solid black;
+  border-radius: 10px;
+  outline: none;
+  font-weight: bold;
+  padding: 5px;
+  margin: 0 auto;
+}
+
+.searchbox input:placeholder-shown{
+  text-align: center;
+}
+
+/* movie section */
+.movie{
+  width: 100%;
+  height: 100vh;
+}
+.movie h1{
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 200px;
+}
