Loading and Enter data message Adding

--- a/src/index.css
+++ b/src/index.css
@@ -116,4 +116,7 @@ body {
   font-weight: bold;
   text-align: center;
   margin-top: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
