--- a/src/index.css
+++ b/src/index.css
@@ -72,26 +72,26 @@ body {
 }
 
 /* search section */
-.searchbox{
+.searchbox {
   width: 500px;
   padding: 5px;
   margin: 30px auto;
 }
 
-.searchbox h5{
+.searchbox h5 {
   font-size: 25px;
   font-weight: bold;
   text-align: center;
   margin: 10px 0;
 }
 
-.searchbox .search{
+.searchbox .search {
   width: 300px;
   margin: 0 auto;
   padding: 5px;
 }
 
-.searchbox .search input{
+.searchbox .search input {
   width: 100%;
   font-size: 20px;
   border: 2px solid black;
@@ -102,16 +102,36 @@ body {
   margin: 0 auto;
 }
 
-.searchbox input:placeholder-shown{
+.searchbox input:placeholder-shown {
   text-align: center;
 }
 
-/* movie section */
-.movie{
-  width: 100%;
-  height: 100vh;
+@media(max-width:576px) {
+  .search {
+    width: 300px;
+  }
+
+  .searchbox {
+    width: 300px;
+  }
+
+  .card {
+    margin: 20px auto !important;
+  }
+
+  .carddata {
+    display: flex;
+    justify-content: center;
+  }
 }
-.movie h1{
+
+/* movie section */
+.movie {
+  width: 100%;
+  height: 100px;
+}
+
+.movie h1 {
   font-size: 25px;
   font-weight: bold;
   text-align: center;
@@ -119,4 +139,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media(max-width:576px) {
+  .movie h1 {
+    margin-top: 150px;
+    font-size: 18px;
+  }
 }
