--- a/src/index.css
+++ b/src/index.css
@@ -141,9 +141,130 @@ body {
   justify-content: center;
 }
 
+.movieloading {
+  width: 100%;
+  height: 300px;
+}
+
+.movieloading h1 {
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media(max-width:576px) {
   .movie h1 {
     margin-top: 150px;
     font-size: 18px;
+  }
+}
+
+/* singlemovie section */
+.single .title {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin: 20px;
+}
+
+.single span {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.single .image {
+  width: 300px;
+  height: 400px;
+  margin: 20px auto;
+}
+
+.single .image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+.single .content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.single .content div {
+  width: 50%;
+}
+
+.single .des {
+  font-weight: bold;
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.single .story {
+  padding: 10px;
+}
+
+.single .button {
+  width: 100%;
+  display: block;
+  padding: 20px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.single button {
+  padding: 8px 18px;
+  border-radius: 10px;
+  background-color: #1d1d1d;
+  color: #f3f3f3;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  border: 2px solid black;
+  font-weight: bold;
+  transition: 0.5s ease;
+}
+
+.single button:hover {
+  background-color: #f3f3f3;
+  color: #1d1d1d;
+  border: 2px solid black;
+  font-weight: bold;
+}
+
+@media(max-width:576px) {
+  .single .content {
+    display: block;
+    padding: 10px;
+  }
+
+  .single .content div {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .single .des {
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
+  .single .story span {
+    font-weight: bold;
+  }
+
+  .single .story {
+    text-align: justify;
+    padding: 10px;
   }
 }
